# dj-indexer

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: database-schema.md  usage-examples.md
queries/: README.md  folder_rekordbox_coverage.sql  folders_by_source.sql  genre_by_source_folder.sql  non_rekordbox_folders.sql  preparation_status.sql  rekordbox_by_source.sql  rekordbox_folders.sql  source_folder_analysis.sql
scripts/: README.md  copy_files.ps1  copy_files.sh
src/dj_indexer/: __init__.py  __main__.py  analyze.py  cli.py  db.py  display.py  export.py  export_results.py  query.py  rekordbox_usb.py  rekordbox_xml.py  scanner.py  search.py  stats.py
tests/: __init__.py  conftest.py  test_csv_export.py  test_query_and_analyze.py  test_rekordbox_xml.py  test_scanner.py  test_search.py
