[project]
name = "dj-indexer"
version = "0.1.0"
description = "Index USB drives and rekordbox collections into a searchable SQLite database"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mutagen>=1.47.0",
    "pyrekordbox>=0.4.4",
    "tqdm>=4.65.0",
]

[project.scripts]
dj-indexer = "dj_indexer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
